# secapi-python

./: README.md  pyproject.toml
.github/: pull_request_template.md
examples/: agent_workflow.py  basic.py
omni_datastream_py/: __init__.py  client.py
secapi_client/: __init__.py  client.py
tests/: test_agent_helpers.py  test_fund_letters.py  test_retry.py  test_tls_context.py
