[project]
name = "secapi-client"
version = "1.0.1"
description = "Python client for source-linked SEC filings and company data"
requires-python = ">=3.11"
readme = "README.md"
license = "MIT"
keywords = [
  "edgar",
  "filings",
  "financial-data",
  "sec",
  "securities",
]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.11",
  "Topic :: Office/Business :: Financial",
]

[project.urls]
Homepage = "https://secapi.ai"
Documentation = "https://docs.secapi.ai/python-sdk"
Repository = "https://github.com/secapi-ai/secapi-python"
Issues = "https://github.com/secapi-ai/secapi-python/issues"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["secapi_client", "omni_datastream_py"]
