[project]
name = "secapi-client"
version = "1.1.0"
description = "Python SDK for source-backed SEC filings and financial data"
requires-python = ">=3.11"
readme = "README.md"
license = "MIT"
authors = [
  { name = "Autonomous Computer" }
]

[project.urls]
Homepage = "https://docs.secapi.ai"
Documentation = "https://docs.secapi.ai"
Repository = "https://github.com/secapi-ai/secapi-python"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["secapi_client", "omni_datastream_py"]
