[project]
name = "secapi-client"
version = "2.0.0"
description = "Python SDK for SEC filings, issuer records, statements, and ownership data"
requires-python = ">=3.11"
readme = "README.md"
license = "MIT"
authors = [
  { name = "Autonomous Computer" }
]

[project.optional-dependencies]
# The SDK is zero-runtime-dependency by design. Installing the `tls` extra adds
# the certifi CA bundle, which the client verifies against automatically — the
# fix for "unable to get local issuer certificate" on Python builds whose system
# trust store lacks current roots (e.g. python.org macOS). See _build_ssl_context.
tls = ["certifi>=2023.7.22"]

[project.urls]
Homepage = "https://secapi.ai/developers"
Documentation = "https://docs.secapi.ai"
Repository = "https://github.com/secapi-ai/secapi-python"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["secapi_client", "omni_datastream_py"]
